--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 
 /* CART */
+:root {
+	    --sizeindex: calc(1vw + 1vh);
+}
 .mini-cart {
 	position: absolute;
 	right: 50px;
@@ -21,7 +24,6 @@
 
 .mini-cart_header{
 	width: 100%;
-	max-width: 480px;
 	display: flex;
 	justify-content: flex-start;
 	border-bottom: 4px solid #006249;
@@ -47,7 +49,7 @@
 
 
 .mini-cart_top {
-	max-height: 323px;
+	height: 323px;
 }
 
 .fa-solid {
@@ -130,8 +132,8 @@
 }
 
 .product-mini img {
-	width: 68px;
-	height: 68px;
+	max-width: 68px;
+	max-height: 68px;
 	margin-right: 10px;
 }
 .product-mini span {
@@ -146,3 +148,60 @@
 	position: relative;
 	text-align: left;
 }
+
+/* Media*/
+@media screen and (max-width: 767px) {
+	.mini-cart {
+		position: absolute;
+		right: 0;
+		top: calc(100% + 30px);
+		width: 100%;
+		height: calc(100vh - 30px);
+		box-shadow: 0 -4px 10px rgba(0, 13, 84, 0.3);
+		background-color: white;
+		justify-content: space-around;
+		transform: translateY(100%);
+		transition:  .2s all linear;
+	}
+	.mini-cart_top {
+		min-height: 600px;
+	}
+	.mini-cart_header {
+		width: 100vw;
+	}
+	.mini-cart--visible {
+		z-index: 4;
+		transform: translateY(0);
+		transition: .2s all linear;
+	}
+	.product-wrap {
+		margin: 10px 0;
+	}
+	.product-mini img {
+		width: 22px;
+		height: 22px;
+		margin-right: 2px;
+	}
+	.product-mini span {
+		font-size: calc(var(--sizeindex)*1.5);
+		margin-right: 5px;
+	}
+	.fa-solid {
+		font-size: calc(var(--sizeindex)*1.5);
+		margin: 0 5px;
+	}
+	.mini-cart_header h5 {
+		font-size: calc(var(--sizeindex)*1.5);
+ 	}
+	.total {
+		font-size: calc(var(--sizeindex)*1.5);
+	}
+	.quantity {
+		font-size: calc(var(--sizeindex)*1.5);
+		align-items: center;
+	}
+	.price {
+		font-size: calc(var(--sizeindex)*1.5);
+	}
+}	
+
